--- a/FakeMyspace/src/main/resources/application.properties
+++ b/FakeMyspace/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.mvc.view.prefix=/WEB-INF/
-spring.datasource.url=jdbc:mysql://localhost:3306/task
+spring.datasource.url=jdbc:mysql://localhost:3306/myspace
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
